--- a/common/foundation/scss/mixins/layout/_index.scss
+++ b/common/foundation/scss/mixins/layout/_index.scss
@@ -1,4 +1,4 @@
 @forward 'variables' show $vvd-layout--fill, $vvd-layout--text, $vvd-layout--outline;
 @use 'mixins';
 
-@include mixins.layout;
+@forward 'mixins' show layout;
