--- a/common/foundation/scss/mixins/layout/_mixins.scss
+++ b/common/foundation/scss/mixins/layout/_mixins.scss
@@ -3,6 +3,7 @@
 @use '../../functions' as functions;
 @use 'variables' as variables;
 @use 'config' as config;
+@use 'sass:selector';
 
 
 ////////////////////////////////////////////////////////////////////////////
@@ -37,20 +38,25 @@ $all-layouts: (
 	#{variables.$vvd-layout--text}: var(#{connotation.$vvd-color-connotation});
 }
 
-@mixin layout() {
-	$list: functions.pick-list(config.$layout-set, variables.$predefined-layout-set);
+@mixin layout {
+	$set: functions.pick-list(config.$layout-set, config.$predefined-layout-set);
 
-	@each $type in $list {
+	@each $type in $set {
 		$compound: '[layout="#{$type}" i]';
-		$local-selector: functions.get-local-selector(config.$selector, variables.$compound-placeholder, $compound);
+		$local-selector: functions.get-local-selector(variables.$selector, variables.$compound-placeholder, $compound);
 
 		@if $type == config.$default {
-			$default-compound-selector: functions.get-attribute-rule-out-compound-selector(layout, config.$default, $list);
-			$default-selector: functions.get-local-selector(config.$selector, variables.$compound-placeholder, $default-compound-selector);
-			$local-selector: $local-selector,	$default-selector;
+			$default-compound-selector: functions.get-attribute-rule-out-compound-selector(layout, config.$default, $set);
+			$default-selector: functions.get-local-selector(variables.$selector, variables.$compound-placeholder, $default-compound-selector);
+			$local-selector: selector.parse(#{$local-selector, $default-selector});
 		}
 
-		#{$local-selector} {
+		// if mixin included within a selector context append that selector as well
+		@if & {
+			$local-selector: selector.nest($local-selector, &);
+		}
+
+		@at-root #{$local-selector} {
 			@extend %#{$type};
 		}
 	}
