--- a/common/foundation/scss/mixins/layout/_variables.scss
+++ b/common/foundation/scss/mixins/layout/_variables.scss
@@ -1,8 +1,15 @@
-$vvd-layout: --vvd-layout;
-$vvd-layout--fill: --vvd-layout--fill;
-$vvd-layout--text: --vvd-layout--text;
-$vvd-layout--outline: --vvd-layout--outline;
+@use 'config';
+
+$prefix: null;
+@if config.$scope {
+	$prefix: --vvd-#{config.$scope}-layout;
+} else {
+	$prefix: --vvd-layout;
+}
+
+$vvd-layout--fill: #{$prefix}--fill;
+$vvd-layout--text: #{$prefix}--text;
+$vvd-layout--outline: #{$prefix}--outline;
 
 $compound-placeholder: '[compound]'; // will be replaced by actual compound
-
-$predefined-layout-set: filled outlined soft text ghost;
+$selector: ':host(#{$compound-placeholder})';
