--- a/common/foundation/scss/mixins/layout/_config.scss
+++ b/common/foundation/scss/mixins/layout/_config.scss
@@ -1,5 +1,5 @@
 $predefined-layout-set: filled outlined soft text ghost;
 
 $default: false !default;
-$layout-set: variables.$predefined-layout-set !default;
+$layout-set: $predefined-layout-set !default;
 $scope: false !default;
