--- a/common/foundation/scss/mixins/layout/_variables.scss
+++ b/common/foundation/scss/mixins/layout/_variables.scss
@@ -1,14 +1,6 @@
 @use 'config';
 
-$prefix: null;
-@if config.$scope {
-	$prefix: --vvd-#{config.$scope}--layout;
-} else {
-	$prefix: --vvd-layout;
-}
 
-$vvd-layout-color-fill: #{$prefix}-color-fill;
-$vvd-layout-color-text: #{$prefix}-color-text;
-$vvd-layout-color-outline: #{$prefix}-color-outline;
-
-$compound-placeholder: '--placeholder--'; // will be replaced by actual compound
+$vvd-layout-color-fill: --#{config.$scope}-color-fill;
+$vvd-layout-color-text: --#{config.$scope}-color-text;
+$vvd-layout-color-outline: --#{config.$scope}-color-outline;
