--- a/components/button/src/vwc-button.scss
+++ b/components/button/src/vwc-button.scss
@@ -33,43 +33,19 @@
 
 @include connotation.connotation;
 
-// ! it's kind of an anti pattern to expose
-// ! implementation details to the consumer region
-// ! the following mixin will set layout custom properties
-// ! on the host and can be overriden,
-// ! but these are not customizable
-// ! preferably a refactor will allow better nesting and
-// ! hiding these props
-@include layout.layout;
-
-:host {
+/////////////////////////////////////////////////////////////////////////////
+.mdc-button {
 	--mdc-button-disabled-ink-color: var(#{vvd-formfield.$formfield-disabled-ink});
 	--mdc-button-disabled-fill-color: var(#{scheme-variables.$vvd-color-neutral-30});
 	--mdc-button-disabled-outline-color: var(#{vvd-formfield.$formfield-disabled-ink});
-	--mdc-button-outline-color: var(#{layout.$vvd-layout--outline}, var(--mdc-theme-primary));
+	--mdc-button-outline-color: var(#{layout.$vvd-layout-color-outline}, var(--mdc-theme-primary));
 	--mdc-button-horizontal-padding: 14px;
 	--button-block-size: 40px;
+	$gutter: 8px;
 
 	@include vvd-formfield.coupling;
-}
+	@include layout.layout;
 
-:host([raised]),
-:host([unelevated]) {
-	--mdc-ripple-color: var(#{layout.$vvd-layout--text}, var(#{connotation.$vvd-color-on-connotation}));
-}
-
-:host([unelevated]) {
-	--mdc-theme-primary: var(#{layout.$vvd-layout--fill}, var(#{connotation.$vvd-color-connotation}));
-	--mdc-theme-on-primary: var(#{layout.$vvd-layout--text}, var(#{connotation.$vvd-color-on-connotation}));
-}
-
-:host([outlined]) {
-	--mdc-theme-primary: var(#{layout.$vvd-layout--text}, var(#{connotation.$vvd-color-on-connotation}));
-	--mdc-theme-on-primary: var(#{layout.$vvd-layout--fill}, var(#{connotation.$vvd-color-connotation}));
-}
-/////////////////////////////////////////////////////////////////////////////
-.mdc-button {
-	$gutter: 8px;
 	height: var(--vvd-button-block-size, var(--button-block-size));
 	border-radius: var(#{button-variables.$vvd-button-shape});
 	// ! this was supposed to be set by MDC
@@ -116,14 +92,29 @@
 			}
 		}
 	}
-}
 
-:host([dense]) {
-	--mdc-button-horizontal-padding: 12px;
-}
+	:host([raised]) &,
+	:host([unelevated]) & {
+		--mdc-ripple-color: var(#{layout.$vvd-layout-color-text}, var(#{connotation.$vvd-color-on-connotation}));
+	}
 
-:host([enlarged]) {
-	--mdc-button-horizontal-padding: 24px;
+	:host([unelevated]) & {
+		--mdc-theme-primary: var(#{layout.$vvd-layout-color-fill}, var(#{connotation.$vvd-color-connotation}));
+		--mdc-theme-on-primary: var(#{layout.$vvd-layout-color-text}, var(#{connotation.$vvd-color-on-connotation}));
+	}
+
+	:host([outlined]) & {
+		--mdc-theme-primary: var(#{layout.$vvd-layout-color-text}, var(#{connotation.$vvd-color-on-connotation}));
+		--mdc-theme-on-primary: var(#{layout.$vvd-layout-color-fill}, var(#{connotation.$vvd-color-connotation}));
+	}
+
+	:host([dense]) & {
+		--mdc-button-horizontal-padding: 12px;
+	}
+
+	:host([enlarged]) & {
+		--mdc-button-horizontal-padding: 24px;
+	}
 }
 
 @include shape-mixins.shape(
