--- a/components/icon-button/src/vwc-icon-button.scss
+++ b/components/icon-button/src/vwc-icon-button.scss
@@ -32,27 +32,24 @@ $block-sizes: (
 	'enlarged': 48px
 );
 
-.mdc-icon-button {
-	@include layout.layout;
-	:host & {
-		// sizing
-		--mdc-icon-button-size: var(#{icon-button-variables.$icon-button-block-size}, #{map.get($block-sizes, 'normal')});
-		@include vvd-formfield.coupling;
+:host {
+	--mdc-icon-button-size: var(#{icon-button-variables.$icon-button-block-size}, #{map.get($block-sizes, 'normal')});
+}
 
-		.mdc-icon-button {
-			display: inline-flex;
-			overflow: hidden;
-			align-items: center;
-			justify-content: center;
-			border: var(#{layout.$vvd-layout-color-outline});
-			background-color: var(#{layout.$vvd-layout-color-fill});
-			border-radius: var(#{icon-button-variables.$icon-button-shape});
-			color: var(#{layout.$vvd-layout-color-text});
-			font-size: inherit;
-			&:disabled {
-				color: var(#{vvd-formfield.$formfield-disabled-ink});
-			}
-		}
+.mdc-icon-button {
+	@include vvd-formfield.coupling;
+	@include layout.layout;
+	display: inline-flex;
+	overflow: hidden;
+	align-items: center;
+	justify-content: center;
+	border: var(#{layout.$vvd-layout-color-outline});
+	background-color: var(#{layout.$vvd-layout-color-fill});
+	border-radius: var(#{icon-button-variables.$icon-button-shape});
+	color: var(#{layout.$vvd-layout-color-text});
+	font-size: inherit;
+	&:disabled {
+		color: var(#{vvd-formfield.$formfield-disabled-ink});
 	}
 }
 
