--- a/components/icon-button/src/vwc-icon-button.scss
+++ b/components/icon-button/src/vwc-icon-button.scss
@@ -13,7 +13,7 @@
 @use '@vonage/vvd-foundation/scss/mixins/layout/config' with (
 	$layout-set: filled outlined ghost,
 	$default: ghost,
-	$scope: vwc-icon-button
+	$scope: vwc-icon-button--layout
 );
 @use '@vonage/vvd-foundation/scss/mixins/layout' as layout;
 
