--- a/common/foundation/scss/mixins/connotation/_index.scss
+++ b/common/foundation/scss/mixins/connotation/_index.scss
@@ -1,4 +1,4 @@
-@use 'mixins';
+@use 'mixins' as mixins;
 @forward 'variables' show $vvd-color-connotation, $vvd-color-on-connotation;
 
 @include mixins.connotation;
