--- a/components/side-drawer/src/vwc-side-drawer.scss
+++ b/components/side-drawer/src/vwc-side-drawer.scss
@@ -3,9 +3,9 @@ $vvd-side-drawer--min-inline-size: --vvd-side-drawer--min-inline-size;
 $vvd-side-drawer--z-index: --vvd-side-drawer--z-index;
 $vvd-side-drawer--background-color: --vvd-side-drawer--background-color;
 
-$z-index-default: var(#{$vvd-side-drawer--z-index}, 6);
-$padding-default: var(#{$vvd-side-drawer--padding}, 16px);
-$min-inline-size-default: var(#{$vvd-side-drawer--min-inline-size}, 280px);
+$z-index-default: 6;
+$padding-default: 16px;
+$min-inline-size-default: 280px;
 
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '@vonage/vvd-typography/scss/typography' as typography;
