--- a/components/button/src/vwc-button.scss
+++ b/components/button/src/vwc-button.scss
@@ -7,7 +7,7 @@
 @use '@vonage/vvd-foundation/scss/mixins/connotation/config' as connotation-config with (
 	$connotations-set: primary cta success alert info announcement,
 	$default: primary,
-	$scope: vwc-button--connotation,
+	$scope: vwc-button,
 );
 @use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation;
 @use '@vonage/vvd-foundation/scss/mixins/shape-mixins' with(
@@ -96,17 +96,17 @@
 
 	:host([raised]) &,
 	:host([unelevated]) & {
-		--mdc-ripple-color: var(#{layout.$vvd-layout-color-text}, var(#{connotation.$vvd-color-on-connotation}));
+		--mdc-ripple-color: var(#{layout.$vvd-layout-color-text});
 	}
 
 	:host([unelevated]) & {
-		--mdc-theme-primary: var(#{layout.$vvd-layout-color-fill}, var(#{connotation.$vvd-color-connotation}));
-		--mdc-theme-on-primary: var(#{layout.$vvd-layout-color-text}, var(#{connotation.$vvd-color-on-connotation}));
+		--mdc-theme-primary: var(#{layout.$vvd-layout-color-fill});
+		--mdc-theme-on-primary: var(#{layout.$vvd-layout-color-text});
 	}
 
 	:host([outlined]) & {
-		--mdc-theme-primary: var(#{layout.$vvd-layout-color-text}, var(#{connotation.$vvd-color-on-connotation}));
-		--mdc-theme-on-primary: var(#{layout.$vvd-layout-color-fill}, var(#{connotation.$vvd-color-connotation}));
+		--mdc-theme-primary: var(#{layout.$vvd-layout-color-text});
+		--mdc-theme-on-primary: var(#{layout.$vvd-layout-color-fill});
 	}
 
 	:host([dense]) & {
