--- a/common/foundation/scss/mixins/layout/_variables.scss
+++ b/common/foundation/scss/mixins/layout/_variables.scss
@@ -1,6 +1,6 @@
 @use 'config';
 
 
-$vvd-layout-color-fill: --#{config.$scope}-color-fill;
-$vvd-layout-color-text: --#{config.$scope}-color-text;
-$vvd-layout-color-outline: --#{config.$scope}-color-outline;
+$vvd-layout-color-fill: --#{config.$scope}--layout-color-fill;
+$vvd-layout-color-text: --#{config.$scope}--layout-color-text;
+$vvd-layout-color-outline: --#{config.$scope}--layout-color-outline;
