--- a/components/button/src/vwc-button.scss
+++ b/components/button/src/vwc-button.scss
@@ -15,7 +15,7 @@
 @use '@vonage/vvd-foundation/scss/mixins/layout/config' as layout-config with (
 	$layout-set: filled outlined ghost,
 	$default: ghost,
-	$scope: vwc-button--layout
+	$scope: vwc-button
 );
 @use '@vonage/vvd-foundation/scss/mixins/layout' as layout;
 
