icon-button & badge

--- a/common/foundation/scss/mixins/connotation/_config.scss
+++ b/common/foundation/scss/mixins/connotation/_config.scss
@@ -9,4 +9,4 @@ $connotations-set: $predefined-connotation-set !default;
 // from including scope to prevent too general
 // custom properties from delegating and inccidently
 // affect deeper scopes
-$scope: vvd-color !default;
+$scope: component !default;
