--- a/common/foundation/scss/mixins/connotation/_mixins.scss
+++ b/common/foundation/scss/mixins/connotation/_mixins.scss
@@ -25,7 +25,7 @@
 }
 
 @function get-pseudo($type) {
-	@return '.#{config.$scope}--color-connotation-#{$type}';
+	@return '.#{config.$scope}--connotation-#{$type}';
 }
 
 @mixin selectors($types...) {
