--- a/components/badge/src/vwc-badge.scss
+++ b/components/badge/src/vwc-badge.scss
@@ -6,7 +6,8 @@ $namespace-shape: #{$namespace}-shape;
 @use '@vonage/vvd-foundation/scss/mixins/connotation/config' with (
 	$connotations-set: primary cta success alert warning info,
 	$shades: (soft, contrast),
-	$default: primary
+	$default: primary,
+	$scope: vwc-badge,
 );
 @use '@vonage/vvd-foundation/scss/mixins/connotation';
 @use '@vonage/vvd-foundation/scss/mixins/shape-mixins' as shape-mixins with (
@@ -19,7 +20,7 @@ $namespace-shape: #{$namespace}-shape;
 );
 @use '@vonage/vvd-foundation/scss/mixins/layout' as layout;
 
-$vvd-badge--block-size: --#{$namespace}--block-size;
+$vvd-badge--block-size: #{$namespace}--block-size;
 
 
 @include shape-mixins.shape(
@@ -45,6 +46,7 @@ $vvd-badge--block-size: --#{$namespace}--block-size;
 .vwc-badge {
 	@include typography.typography-cat-shorthand('caption-bold');
 	@include layout.layout;
+	@include connotation.connotation;
 	display: inline-block;
 	padding: 0 10px;
 	border: var(#{layout.$vvd-layout-color-outline});
