--- a/common/context/src/partials/_theme.scss
+++ b/common/context/src/partials/_theme.scss
@@ -1,14 +1,12 @@
 @use 'variables';
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
 @use '@vonage/vvd-foundation/scss/variable-names/color-base-variable-names' as color-base;
-
-@use '@vonage/vvd-foundation/scss/mixins/connotation/variables' as connotation-variables;
 @use '@vonage/vvd-foundation/scss/mixins/connotation/config' with (
 	$connotations-set: success alert warning info announcement,
 	$default: info,
-	$selector: 'blockquote#{connotation-variables.$compound-placeholder}'
+	$scope: blockquote
 );
-@use '@vonage/vvd-foundation/scss/mixins/connotation';
+@use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation;
 
 
 body {
@@ -39,6 +37,7 @@ body {
 	}
 
 	blockquote {
+		@include connotation.connotation;
 		border-inline-start: 8px solid var(#{connotation.$vvd-color-connotation});
 		box-shadow: inset 0 1px 0 0 #b3b3b3, inset 0 -1px 0 0 #b3b3b3,
 			inset -1px 0 0 0 #b3b3b3;
