--- a/components/side-drawer/src/vwc-side-drawer.scss
+++ b/components/side-drawer/src/vwc-side-drawer.scss
@@ -1,10 +1,11 @@
 $vvd-side-drawer--padding: --vvd-side-drawer--padding;
 $vvd-side-drawer--min-inline-size: --vvd-side-drawer--min-inline-size;
 $vvd-side-drawer--z-index: --vvd-side-drawer--z-index;
+$vvd-side-drawer--background-color: --vvd-side-drawer--background-color;
 
-$z-index-default: var(#{$vvd-side-drawer--z-index}, 6);
-$padding-default: var(#{$vvd-side-drawer--padding}, 16px);
-$min-width: 280px;
+$z-index-default: 6;
+$padding-default: 16px;
+$min-inline-size-default: 280px;
 
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '@vonage/vvd-typography/scss/typography' as typography;
@@ -16,36 +17,23 @@ $min-width: 280px;
 }
 
 .side-drawer {
-	z-index: #{$z-index-default};
+	z-index: var(#{$vvd-side-drawer--z-index}, var(#{$z-index-default}));
+	background-color: var(#{$vvd-side-drawer--background-color}, var(#{scheme-variables.$vvd-color-canvas}));
 	color: var(#{scheme-variables.$vvd-color-on-canvas});
-	min-inline-size: var(#{$vvd-side-drawer--min-inline-size}, $min-width);
+	min-inline-size: var(#{$vvd-side-drawer--min-inline-size}, var(#{$min-inline-size-default}));
+
 	&:not(.vvd-side-drawer--alternate):not(.vvd-side-drawer--modal) {
-		background-color: var(#{scheme-variables.$vvd-color-neutral-10});
+		background-color: var(#{$vvd-side-drawer--background-color}, var(#{scheme-variables.$vvd-color-neutral-10}));
 	}
-	&.vvd-side-drawer--alternate {
-		background-color: var(#{scheme-variables.$vvd-color-canvas});
-	}
-	&.vvd-side-drawer--modal {
-		background-color: var(#{scheme-variables.$vvd-color-canvas});
-		@media screen and (prefers-reduced-motion: reduce) {
-			&.vvd-side-drawer--open {
-				transform: translateX(0%);
-				transition: none;
-			}
+
+	&.vvd-side-drawer--modal,
+	&.vvd-side-drawer--dismissible {
+		@media (prefers-reduced-motion: no-preference) {
+			transition: transform 0.2s cubic-bezier(0.4, 0, 0.2, 1);
 		}
 
-		&.vvd-side-drawer--open {
-			transform: translateX(0%);
-			transition: transform 0.5s linear;
-		}@media screen and (prefers-reduced-motion: reduce) {
-			&:not(.vvd-side-drawer--open) {
-				transform: translateX(-100%);
-				transition: none;
-			}
-		}
 		&:not(.vvd-side-drawer--open) {
 			transform: translateX(-100%);
-			transition: transform 0.5s linear;
 		}
 	}
 }
@@ -64,21 +52,21 @@ $min-width: 280px;
 }
 
 .vvd-side-drawer--modal {
+	position: fixed;
 	top: 0;
 	right: initial;
 	bottom: 0;
 	left: 0;
+}
 
-	&.vvd-side-drawer--absolute {
-		position: absolute;
-	}
-	&:not(.vvd-side-drawer--absolute) {
-		position: fixed;
-	}
+.aside-container {
+	display: flex;
+	&:not(&--open) {width: 0;}
 }
 
 .vvd-side-drawer--scrim {
 	@include scrim-mixins.scrim-variables;
+	position: fixed;
 	z-index: calc(#{$z-index-default} - 1);
 	top: 0;
 	right: 0;
@@ -86,14 +74,4 @@ $min-width: 280px;
 	left: 0;
 	background-color: var(#{scrim-mixins.$vvd-scrim--background-color});
 	opacity: var(#{scrim-mixins.$vvd-scrim--opacity});
-
-	&.vvd-side-drawer--absolute {
-		position: absolute;
-	}
-	&:not(.vvd-side-drawer--absolute) {
-		position: fixed;
-	}
 }
-
-
-
