--- a/components/snackbar/src/vwc-snackbar.scss
+++ b/components/snackbar/src/vwc-snackbar.scss
@@ -1,13 +1,15 @@
 @use '@vonage/vvd-typography/scss/typography' as typography;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
-@use '@vonage/vvd-foundation/scss/mixins/connotation/variables' as connotation-variables;
 @use '@vonage/vvd-foundation/scss/mixins/connotation/config' with (
 	$connotations-set: success alert warning info announcement,
 	$default: announcement,
-	$selector: ':host(#{connotation-variables.$compound-placeholder}) .vvd-snackbar'
+	$scope: vwc-snackbar
 );
-@use '@vonage/vvd-foundation/scss/mixins/connotation';
+@use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation;
 
+.vvd-snackbar {
+	@include connotation.connotation;
+}
 
 :host {
 	@include typography.typography-cat-shorthand('caption');
