--- a/components/side-drawer/src/vwc-side-drawer.scss
+++ b/components/side-drawer/src/vwc-side-drawer.scss
@@ -18,7 +18,7 @@ $min-inline-size-default: 280px;
 
 .side-drawer {
 	z-index: var(#{$vvd-side-drawer--z-index}, #{$z-index-default});
-	background-color: var(#{$vvd-side-drawer--background-color}, #{scheme-variables.$vvd-color-canvas});
+	background-color: var(#{scheme-variables.$vvd-color-canvas});
 	color: var(#{scheme-variables.$vvd-color-on-canvas});
 	min-inline-size: var(#{$vvd-side-drawer--min-inline-size}, #{$min-inline-size-default});
 
