--- a/components/text/src/vwc-text.scss
+++ b/components/text/src/vwc-text.scss
@@ -1,28 +1,26 @@
-$vwc-text--color: --vwc-text--color;
-
 @use '@vonage/vvd-typography/scss/typography' as typography;
 @use '@vonage/vvd-design-tokens/build/scss/typography-variables/web' as typography-scale;
 @use '@vonage/vvd-foundation/scss/mixins/connotation/config' with (
 	$connotations-set: primary cta announcement info success alert,
-	$default: primary
+	$default: primary,
+	$scope: vwc-text
 );
-@use '@vonage/vvd-foundation/scss/mixins/connotation';
+@use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation;
 
 
-:host {
-	--vwc-text--color: var(#{connotation.$vvd-color-connotation});
+.vwc-text {
 	@include typography.typography-cat-shorthand('body-1');
-	display: contents;
-	color: var(#{$vwc-text--color});
+	@include connotation.connotation;
+	color: var(#{connotation.$vvd-color-connotation});
+
+	@each $key, $value in typography-scale.$typography-category-list {
+		&.vwc-text--font-face-#{$key} {
+			@include typography.typography-cat-shorthand($key);
+		}
+	}
 }
 
 ::slotted(*) {
 	color: inherit;
 	font: inherit;
-}
-
-@each $key, $value in typography-scale.$typography-category-list {
-	:host([font-face="#{$key}"i]) {
-		@include typography.typography-cat-shorthand($key);
-	}
 }
