refactor(vvd-foundation): layout to mixin convention (#1039)
* refactor(vvd-foundation): layout to mixin convention

* layout refactored

* layout aligned

* refactored layout

* experimental

* refactored layout

* update button & icon-button

* button refactor

* typos in icon-button

* annotate types

* typo

* mixin subcategory

* all aligned

* differentiate configs names

* refactor(vwc-icon-button-toggle): decouple component

* connotation typo

* snapshot changed

* fixed tests

* restyle toggle group

* Update components/icon-button/src/vwc-icon-button.scss

* Update components/badge/src/vwc-badge.scss

* Update components/button/src/vwc-button.scss

* align with connotation

* update icon-button & badge

* scope default

* set -> layout-set

* unrelated changes

--- a/common/foundation/scss/functions/_misc.scss
+++ b/common/foundation/scss/functions/_misc.scss
@@ -7,3 +7,15 @@
 		#{$compound}
 	);
 }
+
+@function get-attribute-rule-out-compound-selector($key, $selected-value, $all-values) {
+	$compound: '';
+
+	@each $value, $_ in $all-values {
+		@if $value != $selected-value {
+			$compound: $compound + ':not([#{$key}="#{$value}"i])';
+		}
+	}
+
+	@return $compound;
+}
