--- a/components/button/src/vwc-button.scss
+++ b/components/button/src/vwc-button.scss
@@ -12,10 +12,13 @@
 @use '@vonage/vvd-foundation/scss/mixins/shape-mixins' with(
 	$variable-name: --vvd-button-shape
 );
-@use '@vonage/vvd-foundation/scss/mixins/layout-mixins' with (
-	$layouts: filled outlined ghost,
-	$variable-prefix: button-variables.$vvd-button-layout
+@use '@vonage/vvd-foundation/scss/mixins/layout/config' as layout-config with (
+	$layout-set: filled outlined ghost,
+	$default: ghost,
+	$scope: vwc-button
 );
+@use '@vonage/vvd-foundation/scss/mixins/layout' as layout;
+
 
 @mixin size($type, $unit) {
 	:host([#{$type}]) & {
@@ -29,38 +32,19 @@
 	}
 }
 
-@include layout-mixins.layout();
-@include layout-mixins.layout-default(ghost);
 
-
-:host {
+.mdc-button {
 	--mdc-button-disabled-ink-color: var(#{vvd-formfield.$formfield-disabled-ink});
 	--mdc-button-disabled-fill-color: var(#{scheme-variables.$vvd-color-neutral-30});
 	--mdc-button-disabled-outline-color: var(#{vvd-formfield.$formfield-disabled-ink});
-	--mdc-button-outline-color: var(#{button-variables.$vvd-button-layout}--outline, var(--mdc-theme-primary));
+	--mdc-button-outline-color: var(#{layout.$vvd-layout-color-outline}, var(--mdc-theme-primary));
 	--mdc-button-horizontal-padding: 14px;
 	--button-block-size: 40px;
+	$gutter: 8px;
 
 	@include vvd-formfield.coupling;
-}
+	@include layout.layout;
 
-:host([raised]),
-:host([unelevated]) {
-	--mdc-ripple-color: var(#{button-variables.$vvd-button-layout}--text, var(#{connotation.$vvd-color-on-connotation}));
-}
-
-:host([unelevated]) {
-	--mdc-theme-primary: var(#{button-variables.$vvd-button-layout}--fill, var(#{connotation.$vvd-color-connotation}));
-	--mdc-theme-on-primary: var(#{button-variables.$vvd-button-layout}--text, var(#{connotation.$vvd-color-on-connotation}));
-}
-
-:host([outlined]) {
-	--mdc-theme-primary: var(#{button-variables.$vvd-button-layout}--text, var(#{connotation.$vvd-color-on-connotation}));
-	--mdc-theme-on-primary: var(#{button-variables.$vvd-button-layout}--fill, var(#{connotation.$vvd-color-connotation}));
-}
-/////////////////////////////////////////////////////////////////////////////
-.mdc-button {
-	$gutter: 8px;
 	height: var(--vvd-button-block-size, var(--button-block-size));
 	border-radius: var(#{button-variables.$vvd-button-shape});
 	// ! this was supposed to be set by MDC
@@ -107,14 +91,29 @@
 			}
 		}
 	}
-}
 
-:host([dense]) {
-	--mdc-button-horizontal-padding: 12px;
-}
+	:host([raised]) &,
+	:host([unelevated]) & {
+		--mdc-ripple-color: var(#{layout.$vvd-layout-color-text}, var(#{connotation.$vvd-color-on-connotation}));
+	}
 
-:host([enlarged]) {
-	--mdc-button-horizontal-padding: 24px;
+	:host([unelevated]) & {
+		--mdc-theme-primary: var(#{layout.$vvd-layout-color-fill}, var(#{connotation.$vvd-color-connotation}));
+		--mdc-theme-on-primary: var(#{layout.$vvd-layout-color-text}, var(#{connotation.$vvd-color-on-connotation}));
+	}
+
+	:host([outlined]) & {
+		--mdc-theme-primary: var(#{layout.$vvd-layout-color-text}, var(#{connotation.$vvd-color-on-connotation}));
+		--mdc-theme-on-primary: var(#{layout.$vvd-layout-color-fill}, var(#{connotation.$vvd-color-connotation}));
+	}
+
+	:host([dense]) & {
+		--mdc-button-horizontal-padding: 12px;
+	}
+
+	:host([enlarged]) & {
+		--mdc-button-horizontal-padding: 24px;
+	}
 }
 
 @include shape-mixins.shape(
