--- a/common/foundation/scss/functions/_pick.scss
+++ b/common/foundation/scss/functions/_pick.scss
@@ -1,16 +1,18 @@
 @use 'sass:list';
 @use 'sass:map';
 
-@function pick-list($list, $map) {
-	$result: ();
-	@each $key in $list {
-		@if map.has-key($map, $key) {
-			$result: list.append($result, map.get($map, $key));
+@function pick-list($subset, $list) {
+	$new-list: ();
+	@each $item in $subset {
+		$n: list.index($list, $item);
+		@if $n != null {
+			$new-item: list.nth($list, $n);
+			$new-list: list.append($new-list, $new-item);
 		} @else {
-			@error 'ERROR: Specified index does not exist in the mapping';
+			@error 'ERROR: Specified item #{$item} does not exist';
 		}
 	}
-	@return $result;
+	@return $new-list;
 }
 
 @function pick-map($list, $map) {
