--- a/components/icon-button/src/vwc-icon-button.scss
+++ b/components/icon-button/src/vwc-icon-button.scss
@@ -11,10 +11,12 @@
 	$default: primary
 );
 @use '@vonage/vvd-foundation/scss/mixins/connotation';
-@use '@vonage/vvd-foundation/scss/mixins/layout-mixins' with (
-	$layouts: filled outlined ghost,
-	$variable-prefix: icon-button-variables.$vvd-icon-button-layout
+@use '@vonage/vvd-foundation/scss/mixins/layout/config' as layout-config with (
+	$layout-set: filled outlined ghost,
+	$default: ghost,
+	$scope: vwc-icon-button
 );
+@use '@vonage/vvd-foundation/scss/mixins/layout' as layout;
 
 @include shape-mixins.shape(
 	$shapes: (
@@ -23,35 +25,30 @@
 	)
 );
 
-@include layout-mixins.layout();
-@include layout-mixins.layout-default(ghost);
-
-
 $block-sizes: (
 	'dense': 32px,
 	'normal': 40px,
 	'enlarged': 48px
 );
 
-
 :host {
-	// sizing
 	--mdc-icon-button-size: var(#{icon-button-variables.$icon-button-block-size}, #{map.get($block-sizes, 'normal')});
-	@include vvd-formfield.coupling;
+}
 
-	.mdc-icon-button {
-		display: inline-flex;
-		overflow: hidden;
-		align-items: center;
-		justify-content: center;
-		border: var(#{icon-button-variables.$vvd-icon-button-layout}--outline);
-		background-color: var(#{icon-button-variables.$vvd-icon-button-layout}--fill);
-		border-radius: var(#{icon-button-variables.$icon-button-shape});
-		color: var(#{icon-button-variables.$vvd-icon-button-layout}--text);
-		font-size: inherit;
-		&:disabled {
-			color: var(#{vvd-formfield.$formfield-disabled-ink});
-		}
+.mdc-icon-button {
+	@include vvd-formfield.coupling;
+	@include layout.layout;
+	display: inline-flex;
+	overflow: hidden;
+	align-items: center;
+	justify-content: center;
+	border: var(#{layout.$vvd-layout-color-outline});
+	background-color: var(#{layout.$vvd-layout-color-fill});
+	border-radius: var(#{icon-button-variables.$icon-button-shape});
+	color: var(#{layout.$vvd-layout-color-text});
+	font-size: inherit;
+	&:disabled {
+		color: var(#{vvd-formfield.$formfield-disabled-ink});
 	}
 }
 
