--- a/components/media-controller/src/vwc-media-controller.scss
+++ b/components/media-controller/src/vwc-media-controller.scss
@@ -1,9 +1,5 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
-@use '@vonage/vvd-foundation/scss/mixins/connotation/config' with (
-	$connotations-set: primary cta,
-	$default: cta
-);
-@use '@vonage/vvd-foundation/scss/mixins/connotation';
+@use '@vonage/vvd-foundation/scss/mixins/connotation/variables' as connotation-variables;
 
 
 :host([noseek]) {
@@ -38,7 +34,7 @@
 
 
 			> .icon {
-				color: var(#{connotation.$vvd-color-connotation});
+				color: var(#{connotation-variables.$vvd-color-connotation});
 			}
 
 		}
