backwards compatability for list item

--- a/common/foundation/scss/mixins/connotation/_config.scss
+++ b/common/foundation/scss/mixins/connotation/_config.scss
@@ -10,3 +10,4 @@ $connotations-set: $predefined-connotation-set !default;
 // custom properties from delegating and inccidently
 // affect deeper scopes
 $scope: component !default;
+$is-host: false !default; // backwards compatability on components aren't yet structured with base wrapper
